Добавил обработчик обязательных параметров в эндпоинт /stats